# ink2tex

./: .gitignore  ATTRIBUTION.md  Cargo.toml  DESIGN.md  LICENSE-MIT  Makefile  README.md  ROADMAP.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: denoise.rs  error.rs  format.rs  glyphs.rs  latex.rs  lib.rs  line.rs  orient.rs  segment.rs  stroke.rs  structure.rs  typeset.rs  vocab.rs
crates/core/src/classify/: kernel.rs  mod.rs  model.rs  online.rs  raster.rs  weights.rs
crates/core/tests/: denoise_real_ink.rs  ink_roundtrip.rs
crates/core/tests/data/: equation_2x_plus_3_eq_7.ink  equation_landscape_raw.ink  noisy_row.ink  parens_tight_composite.ink  radical_over_expression.ink
crates/desktop/: Cargo.toml
crates/desktop/src/: detexify.rs  main.rs  render.rs  synth.rs
crates/desktop/tests/: corpus.rs
crates/rm/: Cargo.toml
crates/rm/src/: beautify.rs  capture.rs  draw.rs  evdev.rs  inject.rs  main.rs  serve.rs  transform.rs  ui.html
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: core-invariants.md  device.md
packaging/: README.md  build-ipk.sh
packaging/toltec/ink2tex/: package
scripts/: check-core-purity.sh  device-facts.sh  ink2type.sh  wasm-smoke.js
tests/corpus/: latex_amssymb_geq.ink  latex_dsfont_mathds-lbrace-R-rbrace.expected.tex  latex_dsfont_mathds-lbrace-R-rbrace.ink  latex_latex2e_alpha.ink  latex_latex2e_approx.ink  latex_latex2e_equiv.expected.tex  latex_latex2e_equiv.ink  latex_latex2e_forall.expected.tex  latex_latex2e_forall.ink  latex_latex2e_infty.ink  latex_latex2e_int.ink  latex_latex2e_partial.ink  latex_latex2e_pi.ink  latex_latex2e_sqrt-lbrace-rbrace.ink  latex_latex2e_sum.ink  latex_latex2e_xi.expected.tex  latex_latex2e_xi.ink
train/: README.md  collect_expressions.py  dedup_corrections.py  detexify_sql_to_ndjson.py  eval_crohme.py  eval_m2.py  expr.counts.txt  expr.iwt  expr.labels.txt  harvest_m2.py  hwrt_to_ndjson.py  iwt.py  labels_v2.txt  m2_targets.txt  model.iwt  model.labels.txt  model_v2.counts.txt  model_v2.iwt  model_v3.iwt  model_v4.counts.txt  model_v4.iwt  train.py
train/collected/: corrections.ndjson  live_2026-07-13.ndjson  m2_harvest.ndjson  pen_2026-07-13.ndjson  qs_2026-07-12.ndjson  qs_2026-07-12.page.rm
train/collected/m2/: 000.gt.txt  000.ink  001.gt.txt  001.ink  002.gt.txt  002.ink  003.gt.txt  003.ink  004.gt.txt  004.ink  005.gt.txt  005.ink  006.gt.txt  006.ink  007.gt.txt  007.ink  008.gt.txt  008.ink  009.gt.txt  009.ink  010.gt.txt  010.ink  011.gt.txt  011.ink  012.gt.txt  012.ink  013.gt.txt  013.ink  014.gt.txt  014.ink  015.gt.txt  015.ink  016.gt.txt  016.ink  017.gt.txt  017.ink  018.gt.txt  018.ink  019.gt.txt  019.ink  (+160 more)
wasm-demo/: .gitignore  build.sh  index.html
